--- a/index.html
+++ b/index.html
@@ -32,5 +32,47 @@
             </ul>
         </div>
     </header>
+    <main>
+        <div class="searcher"> <!--Block-->
+            <h2>Encuentra eventos en EventTracker</h2>
+            <div class="searcher__inputs-container">
+                <p>Dónde</p>
+                <select name="place" id="place">
+                    <option value="Buenos Aires">Buenos Aires</option>
+                    <option value="Capital federal">Capital federal</option>
+                    <option value="Catamarca">Catamarca</option>
+                    <option value="Chaco">Chaco</option>
+                    <option value="Chubut">Chubut</option>
+                    <option value="Córdoba">Córdoba</option>
+                    <option value="Corrientes">Corrientes</option>
+                    <option value="Entre Ríos">Entre Ríos</option>
+                    <option value="Formosa">Formosa</option>
+                    <option value="Jujuy">Jujuy</option>
+                    <option value="La Pampa">La Pampa</option>
+                    <option value="La Rioja">La Rioja</option>
+                    <option value="Mendoza">Mendoza</option>
+                    <option value="Misiones">Misiones</option>
+                    <option value="Neuquén">Neuquén</option>
+                    <option value="Río Negro">Río Negro</option>
+                    <option value="Salta">Salta</option>
+                    <option value="San Juan">San Juan</option>
+                    <option value="San Luis">San Luis</option>
+                    <option value="Santa Cruz">Santa Cruz</option>
+                    <option value="Santa Fe">Santa Fe</option>
+                    <option value="Santiago del Estero">Santiago del Estero</option>
+                    <option value="Tierra del Fuego">Tierra del Fuego</option>
+                    <option value="Tucumán">Tucumán</option>
+                </select>
+                <label>Desde<input type="date"></label>
+                <label>Hasta<input type="date"></label>
+                <p>Categoría</p>
+                <select name="category" id="category">
+                    <option value="Artistas musicales">Artistas musicales</option>
+                    <option value="Gastronomia">Gastronomia</option>
+                    <option value="VideoJuegos">VideoJuegos</option>
+                </select>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
