Se agrego el footer y se cambiar las imagenes de los logos de redes sociales

--- a/index.html
+++ b/index.html
@@ -95,5 +95,12 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="">          
+            <img src="./assets/imgs/logo-instagram.png" alt="logo de Instagram">
+            <img src="./assets/imgs/logo-facebook.png" alt="logo de Facebook">
+            <img src="./assets/imgs/logo-whatsapp.png" alt="Logo de whatsapp">
+        </div>
+    </footer>
 </body>
 </html>
