Se termino el footer del home

--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="">          
-            <img src="./assets/imgs/logo-instagram.png" alt="logo de Instagram">
-            <img src="./assets/imgs/logo-facebook.png" alt="logo de Facebook">
-            <img src="./assets/imgs/logo-whatsapp.png" alt="Logo de whatsapp">
+    <footer class="footer">
+        <div class="social-media"><!--Block-->
+            <a href="https://www.instagram.com/"><img src="./assets/imgs/logo-instagram.png" alt="logo de Instagram"></a>
+            <a href="https://es-la.facebook.com/"><img src="./assets/imgs/logo-facebook.png" alt="logo de Facebook"></a>
+            <a href="https://web.whatsapp.com/"><img src="./assets/imgs/logo-whatsapp.png" alt="Logo de whatsapp"></a>
+        </div>
+        <div class="footer__icon-copyright">
+            <img src="./assets/imgs/icon-copyRight.svg" alt="Copyright">
         </div>
     </footer>
 </body>
